Add incubator modules to surface